# pyproject.toml
[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplusplus"
version = "1.8.7"
authors = [
    {name = "Roman Yakovenko", email = "roman.yakovenko@gmail.com"},
]
maintainers = [
    {name = "Mark Moll", email = "mark.moll@gmail.com"},
]
description = "Py++ is a framework of components for creating a C++ code generator using the Boost.Python library"
readme = "README.txt"
license = {file = "LICENSE_1_0.txt"}
requires-python = ">=2.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Topic :: Software Development"
]
dependencies = [
    "pygccxml"
]

[tool.setuptools]
packages = [
    "pyplusplus",
    "pyplusplus.file_writers",
    "pyplusplus.code_creators",
    "pyplusplus.creators_factory",
    "pyplusplus.code_repository",
    "pyplusplus.code_repository.indexing_suite",
    "pyplusplus.decl_wrappers",
    "pyplusplus.module_builder",
    "pyplusplus.utils",
    "pyplusplus.function_transformers",
    "pyplusplus._logging_",
    "pyplusplus.messages",
    "pyplusplus.binary_parsers"
]

[tool.cibuildwheel]
archs = ["auto64"]
build-verbosity = 1

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
